<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Campus</string>
    <string name="search">Search</string>
    <string name="tum_logo">TUM Logo</string>
    <string name="update">Update</string>
    <string name="loading">Loading …</string>
    <string name="settings">Settings</string>
    <string name="yes">Yes</string>
    <string name="save">Save</string>
    <string name="no">No</string>
    <string name="no_internet_connection">No internet connection available</string>
    <string name="component_not_available_format" formatted="true">%s not available</string>
    <string name="app_short_description" translatable="false">TUM information platform - from students for students</string>
    <string name="ends_after">Ends after</string>
    <string name="ends_on">Ends on</string>
    <string name="repeats">Repeats Weekly</string>
    <string name="create_event_too_many_error">Event series can not be longer than 6 months.</string>
    <string name="create_event_too_little_error">Event series needs to have at least two events.</string>
    <string name="create_event_some_failed">%1$s out of %2$s events could not be created.</string>
    <string name="delete_series">delete series</string>
    <string name="dialog_show_calendar">Export successful.\nShow local calendar <i>CAMPUS_APP</i> on <i>Google Calendar App</i>?</string>
    <string name="export_to_google">Export to Google</string>
    <string name="export_to_google_error">An error occurred while exporting your calendar to Google Calendar.</string>
    <string name="calendarTimeZone" translatable="false">Germany/Munich</string>
    <string name="delete_from_google">Delete from Google</string>
    <string name="dialog_delete_calendar">Do you want to delete  the <i>TUM_CAMPUS_APP</i>  calendar from your device?</string>
    <string name="calendar_deleted_toast">Calender deleted successfully</string>
    <string name="calendar_not_existing_toast">No local calendar existing</string>
    <string name="semester_summer">Summer term</string>
    <string name="semester_winter">Winter term</string>
    <string name="calendar_filter_title">Change Filters</string>
    <string name="calendar_filter_canceled">Show Canceled Events</string>
    <string name="calendar_filter_hour_limit">Limit Shown Timespan</string>
    <string name="calendar_filter_hour_limit_min_title">From Hour</string>
    <string name="calendar_filter_hour_limit_max_title">To Hour</string>
    <string name="calendar_filter_hour_limit_error_message">Minimum hour must be below maximum hour!</string>
    <string name="no_map_available">No map available</string>
    <string name="no_address_available">No address available</string>
    <string name="no_info_available">No info available</string>
    <string name="no_schedules_available">No schedules available</string>
    <string name="search_rooms">Search rooms</string>
    <string name="error_accessing_lms_header">Error accessing LMS</string>
    <string name="error_accessing_lms_body">Please make sure you are authenticated and has the corresponding rights.</string>
    <string name="error_no_access_token_setup_header">No TUMonline access token was set</string>
    <string name="error_no_access_token_setup_body">Please set your TUMonline access token in the <i>Settings</i> to access TUMonline features.</string>
    <string name="error_something_wrong">Sorry, something went wrong.</string>
    <string name="click_to_try_again"><b>Click here to retry.</b></string>
    <string name="error_access_token_already_set_generate_new">Your TUMonline access token is already set. If you generate a new token, the old one becomes useless.</string>
    <string name="error_invalid_tum_id">Your TUM ID is invalid</string>
    <string name="error_access_token_could_not_be_generated">Your TUMonline access token could not be generated.</string>
    <string name="error_access_token_inactive">Your TUMonline access token is not enabled. Head to TUMonline to enable it.</string>
    <string name="error_no_internet_connection">No Internet connection</string>
    <string name="error_no_data_to_show">No data to show.</string>
    <string name="error_no_rights_to_access_function">You don’t have the rights to access this function.</string>
    <string name="error_unauthorized">You can´t be authenticated.</string>
    <string name="error_resource_not_found">Your requested resource can not be found.</string>
    <string name="error_request_limit_reached">You reached the request limit for TUMonline. Try again later.</string>
    <string name="error_unknown">Unknown error.</string>
    <string name="error_tum_online_unavailable">TUMonline is currently unavailable.</string>
    <string name="error_function_not_available">This function is not available.</string>
    <string name="oauth_callback_host" translatable="false">campus-app</string>
    <string name="oauth_callback_path_prefix" translatable="false">/oauth/callback</string>
    <string name="oauth_callback_scheme" translatable="false">campus</string>
    <string name="oauth_msg">To enable all functions of the app, you need to grant access to your Learning Management System on the next page.\n\nThis App does not save your password.\n\nAfter the setup you can:\n &#8226; View your calendar\n &#8226; See details about your lectures\n &#8226; Get an overview over your grades\n &#8226; Check if you have outstanding tuition fees\n &#8226; Chat with other students from your lectures</string>
    <string name="error_oauth_request_signing_failed">Your request can not be signed.</string>
    <string name="error_oauth_not_authorized">You are not authorized.</string>
    <string name="error_oauth_communication_failed">The communication with the server failed.</string>
    <string name="empty_string" translatable="false" />
    <string name="average_grade">Average grade</string>
    <string name="average_grade_hint">Estimated average. Please refer to your LMS for the precise one.</string>
    <string name="show_column_chart">Show Column Chart</string>
    <string name="show_pie_chart">Show Pie Chart</string>
    <string name="result_extra">Result:&#160;</string>
    <string name="semester">Semester</string>
    <string name="examiner">Examiner</string>
    <string name="type">Type</string>
    <string name="all_programs">All Grades</string>
    <string name="date">Date</string>
    <string name="credits" translatable="false">ECTS</string>
    <string name="no_grades">You don\'t have any grades yet.</string>
    <string name="no_grade_legend" translatable="false">B</string>
    <string name="lrz_id">Identification</string>
    <string name="role">Role</string>
    <string name="role_summary">Your role at TUM. Either student, employee or guest.</string>
    <string name="student">Student</string>
    <string name="employee">Employee</string>
    <string name="guest">Guest</string>
    <string name="cards_settings">Cards</string>
    <string name="startpage">Startpage</string>
    <string name="notification">Notifications</string>
    <string name="extras">Extras</string>
    <string name="open_wizard">Open Startup-Wizard</string>
    <string name="open_wizard_detail">The Startup-Wizard helps you in order to set the basic preferences for accessing TUMonline services and the layout of this App.</string>
    <string name="account" translatable="false">Account</string>
    <string name="logout">Log out</string>
    <string name="logout_title">Disconnect from LMS</string>
    <string name="logout_message">Are you sure you want to log out?</string>
    <string name="logout_error_title">Logout failed</string>
    <string name="logout_try_again">Do you want to try again?</string>
    <string name="employee_mode">Employee Mode</string>
    <string name="employee_mode_info">Some unnecessary items like grades and tuition fees are hidden in this mode.</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="clear_cache_detail">Deletes all data which was downloaded by the TUM Campus App and stored on your device.</string>
    <string name="delete_cache_sure">Are you sure you want to delete all data?</string>
    <string name="success_clear_cache">Successfully cleared cache</string>
    <string name="services">Services</string>
    <string name="silence_phone">Silent Service</string>
    <string name="silence_phone_info">The device will be automatically put into silent mode during a lecture.</string>
    <string name="background_mode">Background Mode (Recommended)</string>
    <string name="background_info">Content will automatically be updated once per day if you’re in your campus area.</string>
    <string name="mode_background_mode">Background Mode activation</string>
    <string name="always">Always</string>
    <string name="wifi_only">WiFi only</string>
    <string name="demo_mode">In-App-Tutorial</string>
    <string name="demo_info">Activates help mode for instruction on how to use this App.</string>
    <string name="about_tca">About the App</string>
    <string name="information">Information</string>
    <string name="facebook" translatable="false">Facebook</string>
    <string name="facebook_link" translatable="false">https://m.facebook.com/TUMCampus</string>
    <string name="facebook_link_app" translatable="false">fb://facewebmodal/f?href=https://www.facebook.com/TUMCampus</string>
    <string name="github" translatable="false">GitHub</string>
    <string name="github_contribute">Contribute on GitHub</string>
    <string name="github_link" translatable="false">https://github.com/TUM-Dev/Campus-Android</string>
    <string name="licences">Open-source licences</string>
    <string name="licences_summary">Legal notes to licences</string>
    <string name="appearance">Appearance</string>
    <string name="language_preference">Language</string>
    <string name="design_theme_preference">Design Theme</string>
    <string name="system_default">System default</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="onboarding">Onboarding</string>
    <string name="tuition_fees">Tuition Fees</string>
    <string name="news">News</string>
    <string name="extra">Extra</string>
    <string name="next_lecture">Next lecture</string>
    <string name="default_cafeteria">Default Cafeteria</string>
    <string name="default_station">Default Station</string>
    <string name="cafeteria">Cafeteria</string>
    <string name="card_cafeteria_summary">Displays the cafeteria menu</string>
    <string name="card_transportation_summary">Shows you the departure times of public transport</string>
    <string name="card_next_lecture_summary">Shows information about your next lecture</string>
    <string name="card_tuition_fee_summary">Reminds you when you have to pay your fees</string>
    <string name="card_news_summary">Advertises selected news</string>
    <string name="card_chat_summary">Notifies you about new messages</string>
    <string name="chat" translatable="false">Chat</string>
    <string name="display">Display</string>
    <string name="eduroam" translatable="false">Eduroam</string>
    <string name="setup_eduroam_now">Setup Eduroam now</string>
    <string name="card_eduroam_summary">Allows you to easily set up eduroam Wi-Fi connection</string>
    <string name="only_latest_article">Only latest article</string>
    <string name="only_latest_article_summary">Shows only the latest article. Otherwise all articles of the selected sources are shown.</string>
    <string name="mode_silent_mode">State during lectures</string>
    <string name="default_campus">Default campus</string>
    <string name="transport">Transportation</string>
    <string name="campus">Campus</string>
    <string name="cafeteria_cards_settings_title">Select cafeterias to be shown</string>
    <string name="settings_chose_cafeteria_cards">Choose Cafeteria Cards</string>
</resources>