<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:key="cards_pref_container">

    <androidx.preference.PreferenceCategory android:title="@string/appearance">

        <androidx.preference.ListPreference
            android:defaultValue="en"
            android:entries="@array/language_entries"
            android:entryValues="@array/language_values"
            android:icon="@drawable/ic_outline_language_24px"
            android:key="language_preference"
            android:title="@string/language_preference" />

        <androidx.preference.ListPreference
            android:defaultValue="system"
            android:entries="@array/color_mode_entries"
            android:entryValues="@array/color_mode_values"
            android:icon="@drawable/ic_color_lens"
            android:key="design_theme_preference"
            android:title="@string/design_theme_preference" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="@string/campus">

        <androidx.preference.ListPreference
            android:icon="@drawable/ic_outline_business_24px"
            android:key="card_default_campus"
            android:title="@string/default_campus" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="@string/cards_settings">

        <!-- Cafeteria card -->
        <androidx.preference.PreferenceScreen
            android:icon="@drawable/ic_cutlery"
            android:key="card_cafeteria"
            android:summary="@string/card_cafeteria_summary"
            android:title="@string/cafeteria">

            <androidx.preference.PreferenceCategory android:title="@string/display">

                <androidx.preference.CheckBoxPreference
                    android:defaultValue="true"
                    android:key="card_cafeteria_start"
                    android:title="@string/startpage" />

                <androidx.preference.CheckBoxPreference
                    android:defaultValue="true"
                    android:key="card_cafeteria_phone"
                    android:title="@string/notification" />

            </androidx.preference.PreferenceCategory>

            <androidx.preference.PreferenceCategory
                android:key="cafeteria_cards"
                android:title="@string/settings_chose_cafeteria_cards">
                <androidx.preference.MultiSelectListPreference
                    android:defaultValue="@array/cafeteria_cards_default"
                    android:iconSpaceReserved="true"
                    android:key="cafeteria_cards_selection"
                    android:title="@string/cafeteria_cards_settings_title" />
            </androidx.preference.PreferenceCategory>

            <androidx.preference.PreferenceCategory
                android:key="cafeteria_defaults"
                android:title="@string/default_cafeteria">

            </androidx.preference.PreferenceCategory>

            <androidx.preference.PreferenceCategory
                android:key="cafeteria_extra"
                android:title="@string/extra">

                <androidx.preference.ListPreference
                    android:key="card_role"
                    android:title="@string/role" />

            </androidx.preference.PreferenceCategory>

        </androidx.preference.PreferenceScreen>

        <!-- MVV card-->
        <androidx.preference.PreferenceScreen
            android:icon="@drawable/ic_outline_train_24px"
            android:key="card_transportation"
            android:summary="@string/card_transportation_summary"
            android:title="@string/transport">

            <androidx.preference.PreferenceCategory android:title="@string/display">

                <androidx.preference.CheckBoxPreference
                    android:defaultValue="true"
                    android:key="card_transportation_start"
                    android:title="@string/startpage" />

            </androidx.preference.PreferenceCategory>

            <androidx.preference.PreferenceCategory
                android:title="@string/default_station"
                android:key="station_defaults">

            </androidx.preference.PreferenceCategory>

        </androidx.preference.PreferenceScreen>

        <!-- Next lecture card -->
        <androidx.preference.PreferenceScreen
            android:icon="@drawable/ic_outline_event_24px"
            android:key="card_next_lecture"
            android:summary="@string/card_next_lecture_summary"
            android:title="@string/next_lecture">

            <androidx.preference.PreferenceCategory android:title="@string/display">

                <androidx.preference.CheckBoxPreference
                    android:defaultValue="true"
                    android:key="card_next_lecture_start"
                    android:title="@string/startpage" />

                <androidx.preference.CheckBoxPreference
                    android:defaultValue="true"
                    android:key="card_next_lecture_phone"
                    android:title="@string/notification" />

            </androidx.preference.PreferenceCategory>

        </androidx.preference.PreferenceScreen>

        <!-- Tuition fee card -->
        <androidx.preference.PreferenceScreen
            android:icon="@drawable/ic_money"
            android:key="card_tuition_fee"
            android:summary="@string/card_tuition_fee_summary"
            android:title="@string/tuition_fees">

            <androidx.preference.PreferenceCategory android:title="@string/display">

                <androidx.preference.CheckBoxPreference
                    android:defaultValue="true"
                    android:key="card_tuition_fee_start"
                    android:title="@string/startpage" />

                <androidx.preference.CheckBoxPreference
                    android:defaultValue="true"
                    android:key="card_tuition_fee_phone"
                    android:title="@string/notification" />

            </androidx.preference.PreferenceCategory>

        </androidx.preference.PreferenceScreen>

        <!-- News card -->
        <androidx.preference.PreferenceScreen
            android:icon="@drawable/ic_rss"
            android:key="card_news"
            android:summary="@string/card_news_summary"
            android:title="@string/news">

            <androidx.preference.PreferenceCategory android:title="@string/display">

                <androidx.preference.CheckBoxPreference
                    android:defaultValue="true"
                    android:key="card_news_start"
                    android:title="@string/startpage" />

                <androidx.preference.CheckBoxPreference
                    android:defaultValue="false"
                    android:key="card_news_phone"
                    android:title="@string/notification" />

            </androidx.preference.PreferenceCategory>

            <androidx.preference.PreferenceCategory android:title="@string/extra">

                <androidx.preference.SwitchPreferenceCompat
                    android:defaultValue="true"
                    android:key="card_news_latest_only"
                    android:summary="@string/only_latest_article_summary"
                    android:title="@string/only_latest_article" />

            </androidx.preference.PreferenceCategory>

        </androidx.preference.PreferenceScreen>

        <!-- Chat card -->
        <androidx.preference.PreferenceScreen
            android:icon="@drawable/ic_outline_chat_bubble_outline_24px"
            android:key="card_chat"
            android:summary="@string/card_chat_summary"
            android:title="@string/chat">

            <androidx.preference.PreferenceCategory android:title="@string/display">

                <androidx.preference.CheckBoxPreference
                    android:defaultValue="true"
                    android:key="card_chat_start"
                    android:title="@string/startpage" />

                <androidx.preference.CheckBoxPreference
                    android:defaultValue="true"
                    android:key="card_chat_phone"
                    android:title="@string/notification" />

            </androidx.preference.PreferenceCategory>

        </androidx.preference.PreferenceScreen>

        <!-- Eduroam card -->
        <androidx.preference.PreferenceScreen
            android:icon="@drawable/ic_action_network_wifi"
            android:key="card_eduroam"
            android:summary="@string/card_eduroam_summary"
            android:title="@string/eduroam">

            <androidx.preference.PreferenceCategory android:title="@string/display">

                <androidx.preference.CheckBoxPreference
                    android:defaultValue="true"
                    android:key="card_eduroam_start"
                    android:title="@string/startpage" />

                <androidx.preference.CheckBoxPreference
                    android:defaultValue="true"
                    android:key="card_eduroam_phone"
                    android:title="@string/notification" />

            </androidx.preference.PreferenceCategory>

            <androidx.preference.PreferenceCategory android:title="@string/extra">

                <androidx.preference.Preference
                    android:key="card_eduroam_setup"
                    android:title="@string/setup_eduroam_now" />

            </androidx.preference.PreferenceCategory>

        </androidx.preference.PreferenceScreen>

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="@string/services">

        <androidx.preference.SwitchPreferenceCompat
            android:icon="@drawable/ic_outline_phonelink_ring_24px"
            android:key="silent_mode"
            android:summary="@string/silence_phone_info"
            android:title="@string/silence_phone" />

        <androidx.preference.ListPreference
            android:defaultValue="0"
            android:dependency="silent_mode"
            android:entries="@array/silent_entries"
            android:entryValues="@array/silent_mode_values"
            android:key="silent_mode_set_to"
            android:title="@string/mode_silent_mode" />

        <androidx.preference.SwitchPreferenceCompat
            android:icon="@drawable/ic_outline_update_24px"
            android:key="background_mode"
            android:summary="@string/background_info"
            android:title="@string/background_mode" />

        <androidx.preference.ListPreference
            android:defaultValue="0"
            android:dependency="background_mode"
            android:entries="@array/background_entries"
            android:entryValues="@array/background_mode_values"
            android:key="background_mode_set_to"
            android:title="@string/mode_background_mode" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="@string/account">

        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="false"
            android:icon="@drawable/ic_outline_people_outline_24px"
            android:key="employee_mode"
            android:summary="@string/employee_mode_info"
            android:title="@string/employee_mode" />
        <androidx.preference.Preference
            android:icon="@drawable/ic_outline_exit_to_app_24px"
            android:key="button_logout"
            android:title="@string/logout" />

    </androidx.preference.PreferenceCategory>

</androidx.preference.PreferenceScreen>